<resources>
    <string name="app_name">videoedit</string>

    <string name="select_preset_file_title" translatable="false">Choose preset file</string>
    <string name="select_local_file_title">Choose local file</string>
    <string name="flatten_for_slow_motion" translatable="false">Flatten for slow motion</string>
    <string name="audio_mime" translatable="false">Output audio MIME type</string>
    <string name="video_mime" translatable="false">Output video MIME type</string>
    <string name="resolution_height" translatable="false">Output video resolution</string>
    <string name="scale" translatable="false">Scale video</string>
    <string name="enable_fallback" translatable="false">Enable fallback</string>
    <string name="enable_debug_preview" translatable="false">Enable debug preview</string>
    <string name="request_sdr_tone_mapping" translatable="false">Request SDR tone-mapping (API 31+)</string>
    <string name="force_interpret_hdr_video_as_sdr" translatable="false">Interpret HDR as SDR (API 29+)</string>
    <string name="hdr_editing" translatable="false">HDR editing (API 31+)</string>
    <string name="select_demo_effects" translatable="false">Add demo effects</string>
    <string name="periodic_vignette_options" translatable="false">Periodic vignette options</string>
    <string name="transform" translatable="false">Transform</string>
    <string name="debug_preview" translatable="false">Debug preview:</string>
    <string name="debug_preview_not_available" translatable="false">No debug preview available.</string>
    <string name="transformation_started" translatable="false">Transformation started</string>
    <string name="transformation_timer" translatable="false">Transformation started %d seconds ago.</string>
    <string name="transformation_completed" translatable="false">Transformation completed in %d seconds.</string>
    <string name="transformation_error" translatable="false">Transformation error</string>

    <string name="contrast_value" translatable="false">Contrast value</string>
    <string name="center_x">Center X</string>
    <string name="center_y">Center Y</string>
    <string name="radius_range">Radius range</string>
    <string name="hsl_adjustment_options" translatable="false">HSL adjustment options</string>
    <string name="hue_adjustment">Hue adjustment</string>
    <string name="saturation_adjustment">Saturation adjustment</string>
    <string name="lightness_adjustment">Lightness adjustment</string>
    <string name="input_video">Input video:</string>
    <string name="output_video">Output video:</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="hide_input_video">Hide input video</string>
    <string name="show_input_video">Show input video</string>
</resources>