<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<TableLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:stretchColumns="1"
  android:layout_marginTop="32dp"
  android:measureWithLargestChild="true"
  android:paddingLeft="24dp"
  android:paddingRight="12dp"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintTop_toTopOf="parent"
  app:layout_constraintBottom_toBottomOf="parent">
  <TableRow
    android:layout_weight="1"
    android:gravity="center_vertical" >
    <TextView
      android:text="@string/hue_adjustment" />
    <com.google.android.material.slider.Slider
      android:id="@+id/hsl_adjustments_hue"
      android:valueFrom="-360"
      android:value="0"
      android:valueTo="360"
      android:layout_gravity="end"/>
  </TableRow>
  <TableRow
    android:layout_weight="1"
    android:gravity="center_vertical" >
    <TextView
      android:text="@string/saturation_adjustment" />
    <com.google.android.material.slider.Slider
      android:id="@+id/hsl_adjustments_saturation"
      android:valueFrom="-100"
      android:value="0"
      android:valueTo="100"
      android:layout_gravity="end"/>
  </TableRow>
  <TableRow
    android:layout_weight="1"
    android:gravity="center_vertical" >
    <TextView
      android:text="@string/lightness_adjustment" />
    <com.google.android.material.slider.Slider
      android:id="@+id/hsl_adjustment_lightness"
      android:valueFrom="-100"
      android:value="0"
      android:valueTo="100"
      android:layout_gravity="end"/>
  </TableRow>
</TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
