<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1"
      android:layout_marginTop="32dp"
      android:measureWithLargestChild="true"
      android:paddingLeft="24dp"
      android:paddingRight="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">
      <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical" >
        <TextView
          android:text="@string/center_x" />
        <com.google.android.material.slider.Slider
          android:id="@+id/periodic_vignette_center_x_slider"
          android:valueFrom="0.0"
          android:value="0.5"
          android:valueTo="1.0"
          android:layout_gravity="end"/>
      </TableRow>
      <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical" >
        <TextView
          android:text="@string/center_y" />
        <com.google.android.material.slider.Slider
          android:id="@+id/periodic_vignette_center_y_slider"
          android:valueFrom="0.0"
          android:value="0.5"
          android:valueTo="1.0"
          android:layout_gravity="end"/>
      </TableRow>
      <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical" >
        <TextView
          android:text="@string/radius_range" />
        <com.google.android.material.slider.RangeSlider
          android:id="@+id/periodic_vignette_radius_range_slider"
          android:valueFrom="0.0"
          android:valueTo="1.414"
          android:layout_gravity="end"/>
      </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
