<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:keepScreenOn="true"
  android:orientation="vertical">

  <com.frank.videoedit.view.MaterialCardView
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:gravity="center_vertical" >

    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/information_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp" />

      <Button
        android:id="@+id/display_input_button"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_input_video"
        android:layout_margin="8dp" />


    </LinearLayout>

  </com.frank.videoedit.view.MaterialCardView>

  <com.frank.videoedit.view.MaterialCardView
    android:id="@+id/input_card_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/input_video" />

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <SurfaceView
        android:id="@+id/input_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      </FrameLayout>
    </LinearLayout>


  </com.frank.videoedit.view.MaterialCardView>

  <com.frank.videoedit.view.MaterialCardView
    android:id="@+id/output_card_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/output_video" />

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <SurfaceView
          android:id="@+id/output_player_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

        <LinearLayout
          android:id="@+id/progress_view_group"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_gravity="bottom"
          android:padding="8dp"
          android:orientation="vertical">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center" />

        </LinearLayout>

      </FrameLayout>


    </LinearLayout>

  </com.frank.videoedit.view.MaterialCardView>
</LinearLayout>
